# bevy_learn

./: .gitignore  Cargo.toml
assets/: learn.tiled-session
assets/images/: factory.xcf  project.map.json  radar.xcf  redar_head.xcf
assets/tiles/: bricks_small..tsx  ground_small.tsx  learn.world  menu.tmx  new.tmx  new1.tmx  second.tmx  spawn.tsx  tank.tsx  tutorial.tmx  tutorial_5.tmx
src/: main.rs
src/controls/: camera.rs  mod.rs  movement.rs
src/game/: mod.rs
src/game/actors/: movement.rs  player.rs
src/game/map_objects/: brick.rs  mod.rs  spawn.rs  tree.rs  water.rs
src/game/map_tiles/: brick.rs  mod.rs  tree.rs  water.rs
src/game/weapons/: bullet.rs
src/objects/: counter.rs  game_object.rs  game_objects_logic.rs  mod.rs
src/player/: player.rs
src/shoot/: bullet.rs  mod.rs
src/tile_destructor/: destructor.rs  mod.rs
src/utils/: camera.rs  destructor.rs  mod.rs  pool.rs  region_deactivation.rs  tileset_reader.rs
src/utils/tiled/: destructor.rs  map_object_type.rs  map_tile_type.rs  mod.rs  tileset_reader.rs
