[package]
name = "bevy_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
rand = "0.9.2"
avian2d = { version = "0.4", default-features = true, features = ["simd"] }
# bevy_ecs_tiled = { version = "0.10", features = ["avian", "debug"], path = "../bevy_ecs_tiled" }
bevy_ecs_tiled = { path = "../bevy_ecs_tiled", features = ["avian", "debug"] }
bevy-inspector-egui = "0.35.0"
bevy_spritesheet_animation = "5.1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
